# 3d-rasterizer

./: CMakeLists.txt  README.md
build-vscode/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
build-vscode/.cmake/api/v1/reply/: cache-v2-1a92d258f7d0d70d2555.json  cache-v2-8a2fe9190bf35726c4d1.json  codemodel-v2-441a36bb8a545eaa59d7.json  codemodel-v2-6f73fd700fb2e21d4429.json  codemodel-v2-a373c10a08bbc5382651.json  codemodel-v2-ba83d9ddf16300d52eea.json  codemodel-v2-e6f66751858615c6678a.json  codemodel-v2-f5b76f0e1d039838e59f.json  index-2020-04-03T13-23-05-0138.json  index-2020-04-04T15-07-22-0406.json  index-2020-04-06T13-43-01-0289.json  index-2020-04-16T10-44-03-0555.json  index-2020-04-17T12-57-46-0775.json  index-2020-05-14T08-16-37-0153.json  target-Paint-Debug-14d928a401bdaa558970.json  target-Paint-Debug-1cebdb1a739df323e70a.json  target-Paint-Debug-42f95477c878c9c6299a.json  target-Paint-Debug-6dc4ad7201b7ad3794b4.json  target-Paint-Debug-c301eecaf3ca30a029e6.json  target-Paint-Debug-c6fd56a6c66a35effee5.json
build-vscode/src/: Paint.ilk  cmake_install.cmake
src/: Button.cpp  Button.h  Button.hpp  CMakeLists.txt  Camera.hpp  CloseWindowButton.cpp  CloseWindowButton.h  CoordinateTransformer.hpp  Coordinates.hpp  Drawable.hpp  Entity.hpp  Grid.cpp  Grid.hpp  Input.cpp  Input.h  InputDevice.h  Interactive.h  Interactive.hpp  Keyboard.cpp  Keyboard.h  Math.hpp  Mouse.cpp  Mouse.h  Paint.cpp  Rasterize.hpp  Screen.cpp  Screen.h  Screen.hpp  Sphere.hpp  Texture.hpp  UserInput.cpp  UserInput.h  UserInput.hpp  Vertex.hpp  Window.cpp  Window.hpp
